# kedro-cookie

./: .gitignore  README.md  cookiecutter.json  prompts.yml
{{ cookiecutter.repo_name }}/: .gitignore  noxfile.py  pyproject.toml  requirements.txt
{{ cookiecutter.repo_name }}/docs/: Makefile
{{ cookiecutter.repo_name }}/docs/source/: conf.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.python_package }}/: __init__.py
